# climaus

.github/workflows/: ml-tests.yml  ml_tests.yml
frontend/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/components/: Footer.vue  Header.vue  MapBoxMap.vue  Sidebar.vue  Topbar.vue
frontend/layouts/: dashboard.vue  default.vue
frontend/pages/: dashboard.vue  index.vue
ml/: .gitignore  .pre-commit-config.yaml  pyproject.toml
ml/src/common/: __init__.py  config.py  logger.py  versioning.py
ml/src/data/deforestation/: download.py  processor.py
ml/src/data/metadata/: __init__.py  constants.py
ml/src/models/: base.py
ml/src/test/common/: test_versioning.py
ml/src/tests/common/: test_config.py
