[project]
name = "src"
version = "0.1.0"
description = ""
packages = [{include = "src"}]
authors = [
    {name = "Alan Huynh",email = "hdmquan@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "torch (>=2.7.0,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "lightning (>=2.5.1.post0,<3.0.0)",
    "earthengine-api (>=1.5.14,<2.0.0)",
    "rasterio (>=1.4.3,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydrive (>=1.3.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
pre-commit = "^4.2.0"

